# myos

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yaml  grub.cfg  i686-myos.json  linker.ld
.cargo/: config
boot/: boot.asm  kernel.asm  multiboot_header.asm
fs/: a.txt  kernel.asm  multiboot_header_test_long_file_name.asm  test.txt
fs/aaa/: test2.txt
root/documents/: test.txt
src/: boot.rs  lib.rs  meta.rs  util.rs
src/arch/: asm.rs  ex_int.rs  int.rs  mod.rs  sgm.rs  vga.rs
src/arch/int/: gdt.rs  idt.rs  mod.rs  pic.rs
src/console/: ascii.rs  mod.rs
src/data/: fifo.rs
src/device/: keyboard.rs  mod.rs  pci.rs  serial.rs  usb.rs
src/device/storage/: ahci.rs
src/device/usb/: mod.rs
src/fs/: mod.rs  ramfs.rs  vfs.rs
src/fs/fat/: boot_sector.rs  dir_entery.rs  file_allocation_table.rs  fs_info_sector.rs  mod.rs
src/fs/ramfs/: mod.rs
src/mem/: allocator.rs  mod.rs  paging.rs  phys_mem.rs  virt_mem.rs
src/util/: boot_info.rs  logger.rs  mod.rs  size.rs  type_util.rs
x86/: extfunc.asm  func.asm  kernel.asm
