[package]
name = "myos"
version = "0.1.0"
description = "This is my os in Rust with GRUB"
edition = "2021"
authors = ["Zakki <https://github.com/Zakki0925224>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[profile.dev]
opt-level = 2
lto = true
panic = "abort"

[profile.release]
opt-level = 2
lto = true
panic = "abort"

[dependencies]
volatile = "0.4.4"
spin = "0.9.3"
multiboot2 = "0.14.0"
pci-ids = "0.2.4"
modular-bitfield = "0.11.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
